fixed overlapping select label

--- a/app/styles/App.css
+++ b/app/styles/App.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
 }
 main {
-  margin: 10px;
+  margin: 16px;
 }
 
 .Nav__signout {
